fixed layout problems

--- a/css/adelphi.css
+++ b/css/adelphi.css
@@ -3,16 +3,10 @@ body
 {
     background-color: white;
     margin: 0;
-    padding-top: 75px;
     padding: 0;
     font-size: 14px;
 }
 
-header svg
-{
-    display: block;
-    margin: 0 auto;
-}
 body, p, ul, ol, li, span, div
 {
      font-family: "FreeSans", "Helvetica", sans-serif; 
@@ -20,11 +14,23 @@ body, p, ul, ol, li, span, div
 
 h1,h2,h3,h4,h5 { font-family: Ubuntu, "Gotham", "Futura", "Century Gothic", sans-serif; }
 h1{ font-size: 150%;  margin: 0px; margin-top: 2em; background-color: black; color: white; padding: .25em; }
-h1.title {margin:0;padding:0; border-style: none; background-color: transparent; color: black; clear: both;}
 h2{ font-size: 130%; margin:0; margin-top: 1em; text-transform: uppercase;}
 h3{ font-size: 120%; font-weight: bold; }
 h4{ font-size: 110%; font-weight: bold; }
 h5 { padding: 0; margin: 0; font-size: 100%; font-style: italic; }
+
+h1.title 
+{
+    margin:0;
+    padding:0;
+    padding-top: 60px;
+    border-style: none;
+    background-color: transparent;
+    color: black;
+    clear: both;
+    
+}
+
 
 a { text-decoration: none; }
 a img { border-style: none; }
@@ -59,7 +65,7 @@ p
 .warn { color: red; font-weight: bold; text-align: center; }
 .center { text-align: center; }
 .single, .single p { line-height: 1.25; }
-#required-books p, #suggested-books p,*[id*='reading'] p, .ref p, #course-readings-bibliography p
+#required-books p, #suggested-books p,*[id*='reading'] p, .ref p, #*[id*='bibliography'] p
 {
     margin-bottom: 1em;
     margin-left: 2em;
@@ -105,26 +111,17 @@ h1.title,.rsa-red-text { color: #ab1c19; }
     .page-break {clear: both; page-break-before: always; }
 }
 
-#soe-logo
-{
-    max-width: 100%;
-    float: right;
-    padding: 1em 0;
-}
-
 #logo
 {
     background-color: #444141;
     position: absolute;
     left: 0;
     right: 0;
-    height: 75px;
+    height: 50px;
     word-wrap: break-word;
     overflow: hidden;
     padding: 4px;
 }
-
-
 
 #logo .inner
 {
@@ -134,7 +131,8 @@ h1.title,.rsa-red-text { color: #ab1c19; }
 }
 
 #logo h1 { text-transform: uppercase; }
-#logo h2 { font-size: 100%; display: inline; }
+#logo h2 { font-size: 100%; }
+#logo a {text-transform: lowercase; font-size: 90%; }
 #logo h1, #logo h2, #logo a
 {
     color: white;
@@ -143,7 +141,6 @@ h1.title,.rsa-red-text { color: #ab1c19; }
     border-style: none;
     padding: 0;
     margin: 0;
-    display: block;
     font-weight: bold;
     text-shadow: 2px 2px black;
 }
